# RAG-multi-agents-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: drafter.py  intent_classifier.py  orchestrator.py  qa_agent.py  query_rewriter.py
api/: main.py
api/routes/: __init__.py  chat.py  ingest.py
config/: settings.py
core/: exceptions.py  logging.py  types.py
data/: eval_dataset.json
data/docs/: info.txt  test.md  test.txt  try.txt
evaluation/: __init__.py  dataset.py  evaluate.py  langsmith_tracker.py  ragas_eval.py  reporting.py  runner.py
ingestion/: chunkers.py  loaders.py  pipeline.py
retrieval/: __init__.py  reranker.py  retriever.py  vector_store.py
tests/: test_agents.py  test_api.py  test_chunkers.py  test_loaders.py  test_reranker.py  test_retriever.py  test_types.py  test_vector_store.py
ui/: app.py
